--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ Variables
   --clr-grey-10: hsl(210, 36%, 96%);
   --clr-white: #fff;
   --ff-primary: "Lato", sans-serif;
+  --ff-secondary: "Grand Hotel", cursive;
   --transition: all 0.3s linear;
   --spacing: 0.25rem;
   --radius: 0.5rem;
@@ -50,27 +51,6 @@ Variables
 Global Styles
 ===============
 */
-
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type="number"] {
-  -moz-appearance: textfield;
-}
-
-.row {
-  width: 100%;
-  overflow: hidden;
-}
-
-[class*="col-"] {
-  float: left;
-}
 
 * {
   margin: 0;
@@ -91,56 +71,20 @@ a {
   text-decoration: none;
 }
 
-img {
-  width: 50px;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-/*
-=============== 
-Grid Global
-===============
-*/
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 
-@media only screen and (min-width: 1001px) {
-  [class*="col-"] {
-    float: left;
-  }
-  .col-1 {
-    width: 8.33%;
-  }
-  .col-2 {
-    width: 16.66%;
-  }
-  .col-3 {
-    width: 25%;
-  }
-  .col-4 {
-    width: 33.33%;
-  }
-  .col-5 {
-    width: 41.66%;
-  }
-  .col-6 {
-    width: 50%;
-  }
-  .col-7 {
-    width: 58.33%;
-  }
-  .col-8 {
-    width: 66.66%;
-  }
-  .col-9 {
-    width: 75%;
-  }
-  .col-10 {
-    width: 83.33%;
-  }
-  .col-11 {
-    width: 91.66%;
-  }
-  .col-12 {
-    width: 100%;
-  }
+img {
+  width: 50px;
 }
 
 /*
@@ -151,8 +95,54 @@ Particular CSS
 
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(212, 138, 0, 0.4)),
+    url("/slike/tree.jpg") no-repeat center/cover;
+  color: #ffcc70;
 }
 fieldset {
-  border: none;
+  width: 500px;
+  padding: 0 1rem;
+}
+
+form {
+  padding: 1rem 0;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btn {
+  margin-right: 0.5rem;
+  background: #ffcc70;
+  color: var(--clr-primary-1);
+  padding: 0.2rem 0.5rem;
+  border: 2px solid var(--clr-white);
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.btn:hover {
+  background: var(--clr-primary-1);
+  color: #ffcc70;
+}
+input,
+button,
+h2 {
+  margin-bottom: 0.5rem;
+}
+
+h2 {
+  color: #ffcc70;
+}
+
+input {
+  color: rgb(212, 138, 0);
+  accent-color: #ffcc70;
+}
+
+h1 {
+  text-align: center;
+  font-family: var(--ff-secondary);
+  font-size: 2.5rem;
 }
