--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,9 @@ Particular CSS
 
 body {
   width: 100%;
-  height: 100vh;
+}
+main {
+  height: 780px;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(212, 138, 0, 0.4)),
     url("/slike/tree.jpg") no-repeat center/cover;
   color: #ffcc70;
@@ -145,4 +147,15 @@ h1 {
   text-align: center;
   font-family: var(--ff-secondary);
   font-size: 2.5rem;
+}
+
+/* 
+===========
+Media Query
+===========
+*/
+@media screen and (min-height: 880px) {
+  main {
+    height: 100vh;
+  }
 }
